--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,3 +1,4 @@
+apply plugin: 'com.onesignal.androidsdk.onesignal-gradle-plugin'
 apply plugin: 'com.android.application'
 
 android {
@@ -9,6 +10,11 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        manifestPlaceholders = [
+                onesignal_app_id: 'cc31f1fa-9f6c-4c20-8d1c-974c447c4fe2',
+                // Project number pulled from dashboard, local value is ignored.
+                onesignal_google_project_number: 'REMOTE'
+        ]
     }
     buildTypes {
         release {
@@ -26,7 +32,18 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    implementation 'com.google.android.gms:play-services-location:11.8.0'
+    implementation group: 'com.google.android.gms', name: 'play-services-location', version: '17.0.0'
     implementation 'com.google.code.gson:gson:2.8.1'
     implementation 'com.android.volley:volley:1.1.1'
+    //
+    implementation 'com.squareup.okhttp3:mockwebserver:4.2.0'
+    implementation 'com.squareup.okhttp3:okhttp:4.2.0'
+    implementation 'com.google.firebase:firebase-analytics:17.2.0'
+    implementation 'com.onesignal:OneSignal:[3.11.2, 3.99.99]'
+
+}
+
+apply plugin: 'com.google.gms.google-services'
+repositories {
+    maven { url 'https://maven.google.com' }
 }
